--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "mdmsoft/yii2-admin",
+    //"name": "mdmsoft/yii2-admin",
+    "name": "guisilveirabatista/yii2-admin",
     "description": "RBAC Auth manager for Yii2 ",
     "keywords": ["yii", "admin", "auth", "rbac"],
     "type": "yii2-extension",
